--- a/roles/wartest/tasks/main.yml
+++ b/roles/wartest/tasks/main.yml
@@ -1,6 +1,6 @@
 - name: install pip
-  apt:
-    name: python-pip
+  yum:
+    name: python3-pip
     state: present
 
 - name: pip install docker-py
