--- a/roles/wartest/tasks/main.yml
+++ b/roles/wartest/tasks/main.yml
@@ -21,7 +21,7 @@
   become: yes
 
 - name: Enable Docker Edge repo
-  ini_file:
+  community.general.ini_file:
     dest: /etc/yum.repos.d/docer-ce.repo
     section: 'docker-ce-edge'
     option: enabled
@@ -29,7 +29,7 @@
   become: yes
 
 - name: Enable Docker Test repo
-  ini_file:
+  community.general.ini_file:
     dest: /etc/yum.repos.d/docer-ce.repo
     section: 'docker-ce-test'
     option: enabled
